--- a/Done/XTT@MESL@CTC@ETON.yaml
+++ b/Done/XTT@MESL@CTC@ETON.yaml
@@ -426,7 +426,7 @@ proxy-groups:
     use:
       - 🛫 CTC
       - 🛫 ETON
-    filter: "(HK).*((?i)(game))"
+    filter: "(HK).*((?i)(game|3X))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -439,7 +439,7 @@ proxy-groups:
     use:
       - 🛫 CTC
       - 🛫 ETON
-    filter: "(TW).*((?i)(game))"
+    filter: "(TW).*((?i)(game|3X))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -452,7 +452,7 @@ proxy-groups:
     use:
       - 🛫 CTC
       - 🛫 ETON
-    filter: "(SG).*((?i)(game))"
+    filter: "(SG).*((?i)(game|3X))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -465,7 +465,7 @@ proxy-groups:
     use:
       - 🛫 CTC
       - 🛫 ETON
-    filter: "(JP).*((?i)(game))"
+    filter: "(JP).*((?i)(game|3X))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -478,7 +478,7 @@ proxy-groups:
     use:
       - 🛫 CTC
       - 🛫 ETON
-    filter: "(US).*((?i)(game))"
+    filter: "(US).*((?i)(game|3X))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -491,7 +491,7 @@ proxy-groups:
     use:
       - 🛫 CTC
       - 🛫 ETON
-    filter: "(KR).*((?i)(game))"
+    filter: "(KR).*((?i)(game|3X))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
