--- a/RuleSet/AI合集.yaml
+++ b/RuleSet/AI合集.yaml
@@ -1,5 +1,6 @@
 payload:
-# 内容：再用ai
+# 内容：自用ai
+  - DOMAIN-KEYWORD,chatgpt
   - DOMAIN-SUFFIX,leonardo.ai
   - DOMAIN-SUFFIX,fliki.ai
   - DOMAIN-SUFFIX,genny.lovo.ai
